--- a/astra-blog/app/globals.css
+++ b/astra-blog/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    font-family: var(--font-roboto-serif), serif;
+    font-family: var(--font-DM-Sans), sans-serif;
   }
